[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sharker"
description = "Valuable data extractor from PCAPs leveraging tshark"
readme = "README.md"
requires-python = ">=3.5,<4"
license = "MIT"
authors = [
    { name = "Synacktiv" }
]
keywords = ["sharker", "pcap", "tshark", "wireshark"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/synacktiv/sharker"
Apply = "https://www.synacktiv.com"
Source = "https://github.com/synacktiv/sharker"

[project.scripts]
sharker = "sharker:main"

[tool.setuptools]
include-package-data = true
packages = ["sharker", "sharker.filters"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }
dependencies = { file = "requirements.txt" }
